docs(examples): add autocomplete recipe

--- a/packages/react-instantsearch/examples/autocomplete/package.json
+++ b/packages/react-instantsearch/examples/autocomplete/package.json
@@ -8,7 +8,7 @@
     "react-autosuggest": "^7.0.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-instantsearch": "file:../../dist",
+    "react-instantsearch": "file:../../src",
     "react-instantsearch-theme-algolia": "file:../../../react-instantsearch-theme-algolia"
   },
   "scripts": {
