--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-instantsearch": "file:../../dist",
+    "react-instantsearch": "file:../../src",
     "react-instantsearch-theme-algolia": "file:../../../react-instantsearch-theme-algolia"
   },
   "scripts": {
