--- a/packages/react-instantsearch/examples/react-router/package.json
+++ b/packages/react-instantsearch/examples/react-router/package.json
@@ -8,7 +8,7 @@
     "qs": "^6.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-instantsearch": "file:../../dist",
+    "react-instantsearch": "file:../../src",
     "react-instantsearch-theme-algolia": "file:../../../react-instantsearch-theme-algolia",
     "react-router": "^3.0.0"
   },
